Add MCP Kali Tools integration with ML training for all 7 security scanners (Nmap, Nikto, Dirb, SQLMap, WPScan, Security Headers, SearchSploit) - Remove timeout and add progress indicators